# wolfbot3

./: README.md  pyproject.toml
bot/: wolfbot3.py
bot/botlogger/: logging_manager.py
bot/cogs/: action_item_management.py  action_views.py  attribute_management.py  dice_rolling.py  emoji_manager.py  game_management.py  item_views.py  moderator_request_management.py  persistent_view_management.py  player_management.py  resource_management.py  test.py  voting.py
bot/model/: conf_vars.py  data_model.py
bot/utils/: command_autocompletes.py  message_formatter.py  object_filtering_util.py  string_decorator.py
